onboarding: Fix help text overflow on new orgnisation registration page. Fixes #10866

--- a/static/styles/portico-signin.scss
+++ b/static/styles/portico-signin.scss
@@ -757,7 +757,6 @@ button.login-google-button {
 
 #registration #subdomain_section .inline-block {
     width: 100%;
-    overflow-x: auto;
 }
 
 #registration #subdomain_section .or {
